# single-cell-graph-hub

./: .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_COMPLETION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GENERATION_1_COMPLETE.md  GENERATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MANIFEST.in  Makefile  PRODUCTION_DEPLOYMENT.md  PROJECT_CHARTER.md  QUANTUM_BIOLOGICAL_GNN_RESEARCH_PAPER.md  QUICKSTART.md  README.md  RESEARCH_DATASETS_CATALOG.md  SDLC_ANALYSIS.md  SDLC_COMPLETION_REPORT.md  SECURITY.md  TERRAGON_RESEARCH_AUTONOMOUS_COMPLETION.md  TERRAGON_SDLC_EXECUTION_REPORT.md  TERRAGON_SDLC_PROGRESSIVE_QUALITY_GATES_COMPLETION.md  TERRAGON_SDLC_v4_AUTONOMOUS_COMPLETION.md  TERRAGON_SDLC_v4_ENHANCED_COMPLETION.md  TERRAGON_SDLC_v4_EXECUTION_COMPLETE.md  TERRAGON_SDLC_v4_EXECUTION_REPORT.md  TERRAGON_SDLC_v5_QUANTUM_COMPLETION.md  TERRAGON_SDLC_v6_COMPLETION_REPORT.md  autonomous_execution_final_report.json  autonomous_execution_report.json  (+36 more)
.devcontainer/: devcontainer.json
.github/: project-metrics.json
.security/: master.key
.terragon/: config.yaml  value-metrics.json
autonomous_research_demo/cycle_1/: hypotheses.json  population.json
autonomous_research_demo/cycle_2/: hypotheses.json  population.json
autonomous_research_demo/cycle_3/: hypotheses.json  population.json
autonomous_research_demo/cycle_4/: hypotheses.json  population.json
autonomous_research_demo/cycle_5/: hypotheses.json  population.json
deployment/: autonomous_production.py  global_production_deployment.py  production_deployment.yaml  quantum_research_production.py
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: INDEX.md  QB_GNN_TUTORIAL.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-architecture-decision-records.md  0002-pytorch-geometric-as-graph-framework.md
docs/api/: README.md
docs/deployment/: README.md
docs/guides/: getting-started.md
docs/monitoring/: README.md
docs/runbooks/: incident-response.md  maintenance.md
docs/testing/: README.md
docs/workflows/: README.md
enhanced_autonomous_research_results/: autonomous_experiments.json  generated_hypotheses.json  research_paper_draft.md
enhanced_production_results/: deployment_config.json  deployment_report.md  deployment_status.json  readiness_assessment.json
examples/: basic_usage.py  basic_usage_fixed.py  basic_usage_simple.py  cognitive_evolution_demo.py  complete_terragon_demo.py  comprehensive_quality_gates_demo.py  final_demo.py  generation1_autonomous_demo.py  generation1_enhanced_demo.py  generation1_simple_demo.py  generation2_robust_demo.py  generation2_robustness_demo.py  generation3_optimized_demo.py  generation3_scalability_demo.py  generation3_scalable_demo.py  health_check_demo.py  progressive_quality_gates_demo.py  progressive_resilience_demo.py  progressive_scalability_demo.py  quantum_biological_research_demo.py  quantum_demo_complete.py  research_demo_complete.py  research_execution_demo.py  robust_test.py  scalable_test.py  simple_research_demo.py  simple_test.py  terragon_sdlc_v4_complete_demo.py  v6_autonomous_simulation.py
research_results/: comparative_analysis.md  research_report_BiologicallyInformedGNN.md  research_report_MultiModalIntegrationGNN.md  research_report_TemporalDynamicsGNN.md  research_results_BiologicallyInformedGNN_20250814_180907.json  research_results_MultiModalIntegrationGNN_20250814_180907.json  research_results_TemporalDynamicsGNN_20250814_180907.json
research_validation_results/: research_validation_report.md  validation_results.json
scripts/: build.sh  final-integration.py  verify-setup.py
scripts/automation/: collect-metrics.py  dependency-checker.py  repository-maintenance.py
security_logs/: security_alerts.json
src/scgraph_hub/: __init__.py  academic_validation.py  advanced_dataset.py  advanced_monitoring.py  advanced_scalability.py  advanced_security_framework.py  ai_quality_gates.py  api.py  autonomous.py  autonomous_enhanced.py  autonomous_quality_gates.py  autonomous_research_engine.py  basic_models.py  benchmarks.py  breakthrough_research.py  caching.py  catalog.py  cli.py  cognitive_autonomous.py  comparative_research_framework.py  data_manager.py  database.py  dataset.py  deployment.py  emergent_intelligence.py  enhanced_autonomous_research.py  enhanced_performance.py  enhanced_simple_loader.py  exceptions.py  experimental_baseline_framework.py  global_compliance_engine.py  global_features.py  health_checks.py  hyperscale_edge.py  hyperscale_optimization_engine.py  hyperscale_performance_engine.py  hyperscale_quantum_performance.py  (+34 more)
tests/: __init__.py  comprehensive_test_runner.py  conftest.py  simple_test_runner.py  test_autonomous_features.py  test_basic.py  test_basic_functionality.py  test_breakthrough_research.py  test_comprehensive_coverage.py  test_comprehensive_quality_gates.py  test_core_functionality.py  test_experimental_baseline_framework.py  test_generation2_robust.py  test_generation3_optimized.py  test_integration.py  test_quality_gates.py  test_quantum_research_discovery.py  test_robust_research_infrastructure.py
(+11 files in other folders)
