[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "single-cell-graph-hub"
dynamic = ["version"]
description = "Graph Neural Networks for Single-Cell Omics Analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Terragon Labs", email = "contact@terragonlabs.com"},
]
keywords = [
    "single-cell",
    "graph-neural-networks", 
    "bioinformatics",
    "machine-learning",
    "genomics",
    "pytorch",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0", 
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "h5py>=3.1.0",
    "anndata>=0.8.0",
    "scanpy>=1.8.0",
]

[project.optional-dependencies]
full = [
    "redis>=4.0.0",
    "aioredis>=2.0.0", 
    "aiohttp>=3.8.0",
    "aiofiles>=0.8.0",
    "psutil>=5.8.0",
    "uvloop>=0.16.0",
    "numba>=0.56.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
]

[project.scripts]
scgraph-hub = "scgraph_hub.cli:main"

[project.urls]
Homepage = "https://github.com/terragonlabs/single-cell-graph-hub"
Repository = "https://github.com/terragonlabs/single-cell-graph-hub.git"
"Bug Reports" = "https://github.com/terragonlabs/single-cell-graph-hub/issues"

[tool.setuptools.dynamic]
version = {attr = "scgraph_hub.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["scgraph_hub"]

[tool.mypy] 
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torch_geometric.*", 
    "sklearn.*",
    "networkx.*",
    "matplotlib.*",
    "scanpy.*",
    "anndata.*",
    "redis.*",
    "aioredis.*",
    "faiss.*",
    "numba.*",
]
ignore_missing_imports = true